test/extension_test_cases/invalid/forLoop/forNonAssignStatements.wacc
begin
  for exit 5; true; skip do
    skip
  done
end
